--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  searchable_listview:
+    path: ../
 
 
   # The following adds the Cupertino Icons font to your application.
