--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
         "titleBar.activeBackground": "#2f0601",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#2f060199",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "commandCenter.border": "#e7e7e799"
     },
     "peacock.color": "#2F0601"
 }
