--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,15 @@
 name: searchable_listview
 description: A new easy way to filter listview with simple implementation with possibilty to customize search field and empty widget
-version: 2.2.1
-homepage: https://github.com/koukibadr/Searchable-Listview
-
+version: 2.2.2
+homepage: 'https://github.com/koukibadr/Searchable-Listview'
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
-
+  sdk: '>=2.12.0 <3.0.0'
+  flutter: '>=1.17.0'
 dependencies:
   flutter:
     sdk: flutter
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
-
-flutter:
+flutter: null
