--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,4 +1,7 @@
 include: package:flutter_lints/flutter.yaml
-
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+linter:
+  rules:
+    always_use_package_imports: true
+    always_declare_return_types: true
+    use_key_in_widget_constructors: false
+    require_trailing_commas: true
