Remove onItemSelected attribute

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,25 +1,25 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#610c02",
+        "activityBar.activeBackground": "#282828",
         "activityBar.activeBorder": "#037d0f",
-        "activityBar.background": "#610c02",
+        "activityBar.background": "#282828",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#037d0f",
+        "activityBarBadge.background": "#606020",
         "activityBarBadge.foreground": "#e7e7e7",
-        "sash.hoverBorder": "#610c02",
-        "statusBar.background": "#2f0601",
+        "sash.hoverBorder": "#282828",
+        "statusBar.background": "#0f0f0f",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#610c02",
-        "statusBarItem.remoteBackground": "#2f0601",
+        "statusBarItem.hoverBackground": "#282828",
+        "statusBarItem.remoteBackground": "#0f0f0f",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#2f0601",
+        "titleBar.activeBackground": "#0f0f0f",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#2f060199",
+        "titleBar.inactiveBackground": "#0f0f0f99",
         "titleBar.inactiveForeground": "#e7e7e799",
         "commandCenter.border": "#e7e7e799"
     },
-    "peacock.color": "#2F0601",
+    "peacock.color": "0F0F0F",
     "editor.codeActionsOnSave": {
         "source.fixAll": "explicit",
         "source.organizeImports": "explicit"
